app/assets/stylesheets/formtastic_changes.css.scss
/* -------------------------------------------------------------------------------------------------

Load this stylesheet after formtastic.css in your layouts to override the CSS to suit your needs.
This will allow you to update formtastic.css with new releases without clobbering your own changes.

For example, to make the inline hint paragraphs a little darker in color than the standard #666:

form.formtastic fieldset > ol > li p.inline-hints { color:#333; }

HINT:
The following style may be *conditionally* included for improved support on older versions of IE(<8)
form.formtastic fieldset ol li fieldset legend { margin-left: -6px;}

--------------------------------------------------------------------------------------------------*/

form.formtastic fieldset > ol {
  // Right-align labels
  > li label {
    text-align: right;
    padding-right: 2%;
    padding-top: 5px;
  }
  // Some padding on text inputs
  > li.stringish input {
    padding: 2px;
  }
  > li {
    &.string, &.password, &.numeric, &.email, &.url, &.phone, &.search {
      input {
        width: 70%;
      }
    }
  }
}

// Fieldset widths
form.formtastic {
  fieldset.buttons {
    padding-left: 27%;
  }
  fieldset > ol > li.input {
    p.inline-errors, p.inline-hints {
      margin: 0.5em 0 0 27%;
    }
    &.boolean label {
      padding-left: 27%;
    }
  }
}

